fix z-index

--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -71,6 +71,8 @@
     font-weight: 500;
     text-transform: uppercase;
     font-size: 32px;
+    position: relative;
+    z-index: 2;
     letter-spacing: 0.5px;
     line-height: 48px;
     list-style-type: square;
@@ -80,7 +82,7 @@
     background-color: var(--accent-color);
     transform: rotate(2deg);
     position: relative;
-    z-index: -1;
+    z-index: 1;
     color:var(--secondary-color);
 }
 
